# jeedom-skills

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  nouveau-plugin-tier1.yml  version-divergence.yml
.github/workflows/: tests.yml
docs/: PLANNING.md  README.md  release-checklist.md
docs/decisions/: 0001-skill-vs-slash-command.md  0002-jeedom-version-supportee.md  0003-architecture-repo-multi-skills.md  0004-credentials-strategy.md  0005-mode-acces-mysql-vs-api.md  0006-lecture-seule-absolue.md  0007-13-intentions-5-familles.md  0008-helpers-python-vs-sql-cookbook.md  0009-couverture-plugins-tier-1.md  0010-discipline-naming-OEC.md  0011-frontmatter-en-anglais.md  0012-distribution-skill-package.md  0013-licence-mit.md  0014-zero-telemetrie.md  0015-strategie-documentaire.md  0016-tests-via-ssh-par-claude-code.md  0017-couche-routage-intelligent.md  0018-release-v1.0.0.md  0019-mcp-architecture.md  0020-holmesmcp-projet-separe.md  0020-jeedom-mcp-projet-separe.md  0021-jeedom-plugin-dev-skill.md  0022-licence-agpl3.md  README.md
docs/guides/: architecture.md  getting-started.md  troubleshooting.md  usage.md
docs/references-source/: audit_db.md  brief-initial.md
examples/: 01-audit-general.md  02-explication-scenario.md  03-diagnostic-causal.md  04-graphe-usage.md  05-cartographie-orchestration.md  06-audit-jmqtt.md  07-refus-modification.md  08-plugin-tier-generique.md  README.md
jeedom-audit/: SKILL.md
(+64 files in other folders)
